folders added to splashdown, lists of analysis added, select analysis added, still need folder select

--- a/jsonResultsCreator.ipynb
+++ b/jsonResultsCreator.ipynb
@@ -16,7 +16,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -36,12 +36,12 @@
       "            'sites': []}\n",
       "\n",
       "site1 = {'url': 'http://www.somesiteOne.com', 'externalResults': {}, 'internalResults': {}}\n",
-      "site2 = {'url': 'http://www.somesiteTwo.com', 'externalResults': {}, 'internalResults': {}}\n",
-      "site3 = {'url': 'http://www.somesiteThree.com', 'externalResults': {}, 'internalResults': {}}\n",
+      "#site2 = {'url': 'http://www.somesiteTwo.com', 'externalResults': {}, 'internalResults': {}}\n",
+      "#site3 = {'url': 'http://www.somesiteThree.com', 'externalResults': {}, 'internalResults': {}}\n",
       "\n",
       "analysis['sites'].append(site1)\n",
-      "analysis['sites'].append(site2)\n",
-      "analysis['sites'].append(site3)\n",
+      "#analysis['sites'].append(site2)\n",
+      "#analysis['sites'].append(site3)\n",
       "\n",
       "results = {'visibleText': {}, 'hiddenText': {}, 'headlineText': {},\n",
       "           'allLinks': {}, 'externalDomains': {}, 'linkText': {},\n",
@@ -87,58 +87,12 @@
         "                                    'summary': { },\n",
         "                                    'synonymRings': { },\n",
         "                                    'visibleText': { }},\n",
-        "               'url': 'http://www.somesiteOne.com'},\n",
-        "             { 'externalResults': { 'allLinks': { },\n",
-        "                                    'context': { },\n",
-        "                                    'externalDomains': { },\n",
-        "                                    'headlineText': { },\n",
-        "                                    'hiddenText': { },\n",
-        "                                    'linkText': { },\n",
-        "                                    'searchWords': { },\n",
-        "                                    'selectors': { },\n",
-        "                                    'summary': { },\n",
-        "                                    'synonymRings': { },\n",
-        "                                    'visibleText': { }},\n",
-        "               'internalResults': { 'allLinks': { },\n",
-        "                                    'context': { },\n",
-        "                                    'externalDomains': { },\n",
-        "                                    'headlineText': { },\n",
-        "                                    'hiddenText': { },\n",
-        "                                    'linkText': { },\n",
-        "                                    'searchWords': { },\n",
-        "                                    'selectors': { },\n",
-        "                                    'summary': { },\n",
-        "                                    'synonymRings': { },\n",
-        "                                    'visibleText': { }},\n",
-        "               'url': 'http://www.somesiteTwo.com'},\n",
-        "             { 'externalResults': { 'allLinks': { },\n",
-        "                                    'context': { },\n",
-        "                                    'externalDomains': { },\n",
-        "                                    'headlineText': { },\n",
-        "                                    'hiddenText': { },\n",
-        "                                    'linkText': { },\n",
-        "                                    'searchWords': { },\n",
-        "                                    'selectors': { },\n",
-        "                                    'summary': { },\n",
-        "                                    'synonymRings': { },\n",
-        "                                    'visibleText': { }},\n",
-        "               'internalResults': { 'allLinks': { },\n",
-        "                                    'context': { },\n",
-        "                                    'externalDomains': { },\n",
-        "                                    'headlineText': { },\n",
-        "                                    'hiddenText': { },\n",
-        "                                    'linkText': { },\n",
-        "                                    'searchWords': { },\n",
-        "                                    'selectors': { },\n",
-        "                                    'summary': { },\n",
-        "                                    'synonymRings': { },\n",
-        "                                    'visibleText': { }},\n",
-        "               'url': 'http://www.somesiteThree.com'}],\n",
+        "               'url': 'http://www.somesiteOne.com'}],\n",
         "  'time': 283}\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -169,7 +123,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 50
     },
     {
      "cell_type": "code",
@@ -300,15 +254,17 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 51
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "# Place values into internal and external results for all sites\n",
-      "\n",
-      "sites = [analysis['sites'][0], analysis['sites'][1], analysis['sites'][2]]\n",
+      "sites = []\n",
+      "for site in analysis['sites']:\n",
+      "    sites.append(site)\n",
+      "#sites = [analysis['sites'][0], analysis['sites'][1], analysis['sites'][2]]\n",
       "results = ['internalResults', 'externalResults']\n",
       "i = 1\n",
       "\n",
@@ -331,7 +287,7 @@
       "        site[result]['summary']['links'] = {'internal': 4000, 'external': 1000}\n",
       "        \n",
       "        site[result]['visibleText']['words'] = eval( ex + 'words' + str(i) )\n",
-      "        site[result]['hiddenText']['words'] = eval( ex + 'words' + str(i) )\n",
+      "        \"\"\"site[result]['hiddenText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['headlineText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        \n",
       "        site[result]['linkText']['words'] = eval( ex + 'words' + str(i) )\n",
@@ -393,7 +349,7 @@
       "        site[result]['selectors'][2]['words'] = eval( ex + 'words' + str(i) ) \n",
       "        site[result]['selectors'][2]['pages'] =  pages\n",
       "        site[result]['selectors'][2]['tags'] =  tags\n",
-      "\n",
+      "        \"\"\"\n",
       "    i = i + 1\n",
       "\n",
       "    #pp.pprint(site[result]['summary'])\n"
@@ -401,21 +357,21 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 12
+     "prompt_number": 52
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "import json\n",
-      "f = open('results5.json', 'w')\n",
+      "f = open('results1SiteVisibleOnly.json', 'w')\n",
       "json.dump(analysis, f)\n",
       "f.close()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 18
+     "prompt_number": 53
     },
     {
      "cell_type": "code",
