WTF, WTF, WTF, why won't the unix filter work on the server through python consistently?

--- a/spidertools/SpiderCleanup.ipynb
+++ b/spidertools/SpiderCleanup.ipynb
@@ -102,6 +102,10 @@
       "            key = analysis[a_type]['key'] + analysis[c_type]['key']\n",
       "            cmd_line = \"cat \" + site + \" | \" + unix_pipe(key)\n",
       "            out = subprocess.check_output(cmd_line, shell=True, cwd=cwd)\n",
+      "            \n",
+      "            print \"OUT\"\n",
+      "            print out\n",
+      "            print \"type: \" + str(type(out))\n",
       "\n",
       "            # Handle Word Types\n",
       "            if a_type in ['visible','headline', 'text']:\n",
@@ -111,9 +115,19 @@
       "\n",
       "                # Last line of split is junk\n",
       "                for i, line in enumerate(out.split('\\n')[:-1]):\n",
+      "                    print \"\"\n",
+      "                    print \"line\"\n",
+      "                    print line\n",
+      "                    print \"type: \" + str(type(line))\n",
       "                    word = {}\n",
       "                    word['rank'] = i + 1\n",
       "                    word['word'], word['count'] = line.split('\\t')\n",
+      "                    x,y = line.split('\\t')\n",
+      "                    print \"\"\n",
+      "                    print \"x: \" + x\n",
+      "                    print \"type x: \" + str(type(x))\n",
+      "                    print \"y: \" + y\n",
+      "                    print \"type y: \" + str(type(x))\n",
       "                    word['pages'] = []\n",
       "                    word['tags'] = []\n",
       "                    words.append(word)\n",
@@ -155,13 +169,15 @@
       "        site_results['url'] = site\n",
       "        \n",
       "        finished_analysis['sites'].append(site_results)\n",
-      "        \n",
+      "\n",
+      "pp.pprint(finished_analysis)\n",
+      "\n",
       "json_data = json.dumps(finished_analysis)\n",
       "\n",
       "with open('../spiderweb/app/results1SiteAll.json', 'w') as f:\n",
       "    f.write(json_data)\n",
       "\n",
-      "pp.pprint(json_data)\n",
+      "#pp.pprint(json_data)\n",
       "    \n",
       "\n"
      ],
@@ -172,11 +188,63 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "'{\"name\": \"My Fake Crawls Name\", \"sites\": [{\"url\": \"foxmulti.txt\", \"externalResults\": {\"synonymRings\": {}, \"headlineText\": {}, \"externalDomains\": {}, \"linkText\": {}, \"visibleText\": {}, \"hiddenText\": {}, \"allLinks\": {}, \"summary\": {\"pages\": {\"count\": 0}, \"words\": {\"count\": 0}}, \"searchWords\": {}, \"selectors\": {}, \"context\": {}}, \"internalResults\": {\"synonymRings\": {}, \"headlineText\": {\"words\": [{\"count\": \"11\", \"word\": \"videos)\", \"pages\": [], \"rank\": 1, \"tags\": []}, {\"count\": \"8\", \"word\": \"shows\", \"pages\": [], \"rank\": 2, \"tags\": []}, {\"count\": \"8\", \"word\": \"fox\", \"pages\": [], \"rank\": 3, \"tags\": []}, {\"count\": \"6\", \"word\": \"politics\", \"pages\": [], \"rank\": 4, \"tags\": []}, {\"count\": \"6\", \"word\": \"news\", \"pages\": [], \"rank\": 5, \"tags\": []}]}, \"externalDomains\": {}, \"summary\": {\"words\": {\"count\": 5000000}, \"pages\": {\"count\": 200000, \"list\": [\"http://www.exsite.com/path1\", \"http://www.exsite.com/path2\", \"http://www.exsite.com/path3\"]}, \"links\": {\"internal\": 4000, \"external\": 1000}, \"tags\": {\"total\": 45000, \"list\": [{\"count\": 25000, \"type\": \"text\"}, {\"count\": 5000, \"type\": \"links\"}, {\"count\": 8000, \"type\": \"headlines\"}, {\"count\": 4000, \"type\": \"image\"}, {\"count\": 3000, \"type\": \"other\"}]}}, \"linkText\": {\"words\": [{\"count\": \"77\", \"word\": \"fox\", \"pages\": [], \"rank\": 1, \"tags\": []}, {\"count\": \"39\", \"word\": \"news\", \"pages\": [], \"rank\": 2, \"tags\": []}, {\"count\": \"35\", \"word\": \"twitter\", \"pages\": [], \"rank\": 3, \"tags\": []}, {\"count\": \"35\", \"word\": \"facebook\", \"pages\": [], \"rank\": 4, \"tags\": []}, {\"count\": \"34\", \"word\": \"slide\", \"pages\": [], \"rank\": 5, \"tags\": []}]}, \"context\": {}, \"visibleText\": {\"words\": [{\"count\": \"258\", \"word\": \"2013\", \"pages\": [], \"rank\": 1, \"tags\": []}, {\"count\": \"174\", \"word\": \"mar\", \"pages\": [], \"rank\": 2, \"tags\": []}, {\"count\": \"92\", \"word\": \"fox\", \"pages\": [], \"rank\": 3, \"tags\": []}, {\"count\": \"61\", \"word\": \"news\", \"pages\": [], \"rank\": 4, \"tags\": []}, {\"count\": \"61\", \"word\": \"feb\", \"pages\": [], \"rank\": 5, \"tags\": []}]}, \"hiddenText\": {}, \"allLinks\": {}}}], \"internal\": true, \"external\": false, \"time\": 283, \"date\": \"Thu Mar 21 2013 01:03:56 GMT-0700 (PDT)\"}'\n"
+        "OUT\n",
+        "\n",
+        "type: <type 'str'>\n",
+        "OUT\n",
+        "\n",
+        "type: <type 'str'>\n",
+        "OUT\n",
+        "\n",
+        "type: <type 'str'>\n",
+        "{ 'date': 'Thu Mar 21 2013 01:03:56 GMT-0700 (PDT)',\n",
+        "  'external': False,\n",
+        "  'internal': True,\n",
+        "  'name': 'My Fake Crawls Name',\n",
+        "  'sites': [ { 'externalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { },\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { },\n",
+        "                                    'searchWords': { },\n",
+        "                                    'selectors': { },\n",
+        "                                    'summary': { 'pages': { 'count': 0},\n",
+        "                                                 'words': { 'count': 0}},\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'visibleText': { }},\n",
+        "               'internalResults': { 'allLinks': { },\n",
+        "                                    'context': { },\n",
+        "                                    'externalDomains': { },\n",
+        "                                    'headlineText': { 'words': []},\n",
+        "                                    'hiddenText': { },\n",
+        "                                    'linkText': { 'words': []},\n",
+        "                                    'summary': { 'links': { 'external': 1000,\n",
+        "                                                            'internal': 4000},\n",
+        "                                                 'pages': { 'count': 200000,\n",
+        "                                                            'list': [ 'http://www.exsite.com/path1',\n",
+        "                                                                      'http://www.exsite.com/path2',\n",
+        "                                                                      'http://www.exsite.com/path3']},\n",
+        "                                                 'tags': { 'list': [ { 'count': 25000,\n",
+        "                                                                       'type': 'text'},\n",
+        "                                                                     { 'count': 5000,\n",
+        "                                                                       'type': 'links'},\n",
+        "                                                                     { 'count': 8000,\n",
+        "                                                                       'type': 'headlines'},\n",
+        "                                                                     { 'count': 4000,\n",
+        "                                                                       'type': 'image'},\n",
+        "                                                                     { 'count': 3000,\n",
+        "                                                                       'type': 'other'}],\n",
+        "                                                           'total': 45000},\n",
+        "                                                 'words': { 'count': 5000000}},\n",
+        "                                    'synonymRings': { },\n",
+        "                                    'visibleText': { 'words': []}},\n",
+        "               'url': 'foxmulti.txt'}],\n",
+        "  'time': 283}\n"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
