Added try block to subprocess call for context analysis in spidercleaner.  Was getting an error that the file didn't exist, but that shouldn't happen? Oh well, press.

--- a/spidertools/jsonResultsCreator.ipynb
+++ b/spidertools/jsonResultsCreator.ipynb
@@ -293,7 +293,7 @@
       "        site[result]['linkText']['words'] = eval( ex + 'words' + str(i) )\n",
       "        site[result]['allLinks']['links'] = eval( ex + 'links' + str(i) )\n",
       "        site[result]['externalDomains']['domains'] = eval( ex + 'domains' + str(i) )\n",
-      "        \n",
+      "        \"\"\"\n",
       "        site[result]['context']['contextWords'] = [{}, {}, {}]\n",
       "        site[result]['context']['contextWords'][0]['word'] = ex + 'contextWord1'\n",
       "        site[result]['context']['contextWords'][0]['count'] =  30000 * i\n",
@@ -310,7 +310,7 @@
       "        site[result]['context']['contextWords'][2]['pages'] = pages\n",
       "        site[result]['context']['contextWords'][2]['tags'] = tags\n",
       "        site[result]['context']['contextWords'][2]['words'] = eval( ex + 'words' + str(i) )\n",
-      "        \n",
+      "        \"\"\"\n",
       "        site[result]['searchWords']['words'] = eval( ex + 'searchwords' )\n",
       "        \n",
       "        site[result]['synonymRings']['rings'] = [{}, {}, {}]\n",
@@ -352,7 +352,7 @@
       "        \"\"\"\n",
       "    i = i + 1\n",
       "\n",
-      "    #pp.pprint(site[result]['summary'])\n"
+      "   pp.pprint(site[result]['context'])\n"
      ],
      "language": "python",
      "metadata": {},
